src/objects/Ewarehouse_Farmer__c.object
<CustomObject>
    <description>This is the farmer that is registered by the VKW at the field.</description>
    <fields>
        <fullName>Auto_Generated_Farmer_ID__c</fullName>
        <label>Farmer FCI Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commercial_Purchase_Group_ID__c</fullName>
        <label>Commercial Purchase Group ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Purchase_Groups__c</fullName>
        <description>This is the code for the CPG (Commercial Purchase Group) that a VKW belongs to. It is the second last segment of the unique FCI Farmer ID [**/***/CPG/***]</description>
        <label>Commercial Purchase Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Village_ID__c</fullName>
        <formula>IF( District__c = &quot;TIGANIA WEST&quot;, 
CASE(TRIM(Commercial_Villages__c),
&quot;MAKANDI&quot;,&quot;A1&quot;,&quot;NKOMO&quot;,&quot;A2&quot;,&quot;KIMIRII&quot;,&quot;A3&quot;,&quot;ATHWANA&quot;,&quot;A4&quot;,&quot;MBEU&quot;,&quot;A5&quot;,&quot;KIANDIU&quot;,&quot;A6&quot;,&quot;NCHOORO&quot;,&quot;A7&quot;,&quot;KIANJAI&quot;,&quot;A8&quot;,&quot;GITARU&quot;,&quot;A9&quot;,&quot;NALEGA&quot;,&quot;A10&quot;,&quot;KAMUTHANGA&quot;,&quot;A11&quot;,&quot;KIORIMBA&quot;,&quot;A12&quot;,&quot;TWALE&quot;,&quot;A13&quot;,&quot;KIMACHIA&quot;,&quot;A14&quot;,&quot;THAU&quot;,&quot;A15&quot;,&quot;A9&quot;) , CASE( TRIM(Commercial_Villages__c) ,&quot;MAREGA&quot;,&quot;A1&quot;,&quot;MLANGO&quot;,&quot;A2&quot;,&quot;KIRIENE&quot;,&quot;A3&quot;,&quot;AMATU&quot;,&quot;A4&quot;,&quot;MULIKA&quot;,&quot;A5&quot;,&quot;ATHWANA&quot;,&quot;A6&quot;,&quot;NTHANGATHI&quot;,&quot;A7&quot;,&quot;KITHIRU&quot;,&quot;A8&quot;,&quot;KAMUJINE&quot;,&quot;A9&quot;,&quot;IKANA&quot;,&quot;A10&quot;,&quot;IGARII&quot;,&quot;A11&quot;,&quot;KANTHENGE&quot;,&quot;A12&quot;,&quot;KONJU&quot;,&quot;A13&quot;,&quot;LUUMA&quot;,&quot;A14&quot;,&quot;THARICHIA&quot;,&quot;A15&quot;,&quot;A8&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Village ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Villages__c</fullName>
        <description>This is the code for the CV (Commercial Village) that a VKW belongs to. It is the second segment of the unique FCI Farmer ID [**/VILLAGE/**/***]</description>
        <label>Commercial Villages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ewarehouse Farmers</relationshipLabel>
        <relationshipName>Ewarehouse_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crop_Storage_Location__c</fullName>
        <label>Crop Storage Location</label>
        <picklist>
            <picklistValues>
                <fullName>House on ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House off ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granary on ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granary off ground</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Crop_Storage__c</fullName>
        <label>Crop Storage Mmaterial</label>
        <picklist>
            <picklistValues>
                <fullName>Gunney bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jute bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Pots</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Crops__c</fullName>
        <label>Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cow peas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black beans(Dolichos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pigeon peas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Ewarehouse Farmers</relationshipLabel>
        <relationshipName>Ewarehouse_Farmers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmer_ID__c</fullName>
        <label>Farmer ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Status__c</fullName>
        <label>Household Status</label>
        <picklist>
            <picklistValues>
                <fullName>Household head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse of household head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child of household head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Land_Size__c</fullName>
        <label>Land Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Harvest_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Harvest Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Registered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ewarehouse Farmers (Contact)</relationshipLabel>
        <relationshipName>Ewarehouse_Farmers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Status__c</fullName>
        <label>Sale Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topics_of_Interest__c</fullName>
        <label>Topics of Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ewarehouse Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Ewarehouse_Person__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Auto_Generated_Farmer_ID__c</columns>
        <columns>Registered_By__c</columns>
        <columns>Farmer_ID__c</columns>
        <columns>Commercial_Purchase_Groups__c</columns>
        <columns>Commercial_Village_ID__c</columns>
        <columns>District__c</columns>
        <columns>Registration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>No_Registered_By</fullName>
        <columns>NAME</columns>
        <columns>Auto_Generated_Farmer_ID__c</columns>
        <columns>Farmer_ID__c</columns>
        <columns>Commercial_Purchase_Groups__c</columns>
        <columns>Commercial_Village_ID__c</columns>
        <columns>Ewarehouse_Person__c</columns>
        <columns>Contact__c</columns>
        <columns>Registered_By__c</columns>
        <columns>Registration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Registered_By__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Registered By</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Ewarehouse Farmer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ewarehouse Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>